--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,47 +1,44 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
+name: Python package CI
 
-
-## The release build overwrites these trigger in Azure
-trigger:
-  branches:
-    include:
-      - master
-      - 'refs/tags/*'
-    exclude:
-      - next_*
-pr:
-  - master
+on:
+  push:
+    branches: [ "master" ]
+    tags: [ "*" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
-  
-- job: 'Package'
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.7'
-        architecture: 'x64'
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-    - script: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools wheel
-      displayName: 'Install dependencies'
-    - script: |
-        python setup.py sdist
-      displayName: 'Make sdist'
-    - script: |
-        python setup.py bdist_wheel
-      displayName: 'Make wheel'
-    - script: |
-        pip install pytest pytest-azurepipelines
-        pip install .
-        python -m pytest --pyargs prince_cr --junitxml=junit/test-results.xml
-      displayName: 'pytest'
-    - task: PublishPipelineArtifact@0
-      inputs:
-        artifactName: 'artifact'
-        targetPath: 'dist'
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.13"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade setuptools wheel
+
+      - name: Build sdist
+        run: |
+          python setup.py sdist
+
+      - name: Build wheel
+        run: |
+          python setup.py bdist_wheel
+
+      - name: Test
+        run: |
+          pip install pytest pytest-azurepipelines
+          pip install .
+          python -m pytest --pyargs prince_cr --junitxml=junit/test-results.xml
+
+      - name: Upload dist
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: dist
